# gRPC-demo

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
cmake/: find_grpc.cmake
echo/: CMakeLists.txt
src/: client_demo.cc  demo.proto  server_demo.cc
